--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,8 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    position: absolute;
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
 }
@@ -118,5 +119,54 @@ footer a:hover{
             font-size: 22px;
             margin-bottom: 10px;
         } */
+
+  /*HAMBURGER MENU*/
+  .hamburger-menu{
+    display: none;
+    cursor: pointer;
+    color: white;
+    font-size: 30px;
+
+  }
+/* Responsive Navbar */
+
+@media screen and (max-width: 768px) {
+
+    .hamburger-menu {
+        display: block;  /* Show on smaller screens */
+    }
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    nav{
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        padding: 10px 0;
+
+    }
+     .navbar nav a{
+            text-align: left;
+            width: 100%;
+            padding: 10px ;
+        }
+        .search-box{
+            width: 100%;
+            margin-top: 10px;
+        }
+    }
+    
+   
+
+ 
+
+/* When the hamburger menu is clicked */
+.navbar nav.active {
+    display: flex;
+}
+
+
 
        
