--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 .footer{
     position:fixed;
-    left:2px;
-    bottom:3px;
+    left:0;
+    bottom:0;
     padding: 10px;
     width:100%;
     background-color:gray;
