added new files

--- a/REACT/componentslearn/src/index.css
+++ b/REACT/componentslearn/src/index.css
@@ -57,3 +57,11 @@
     display: grid;
     place-content: center;
   }
+
+  section{
+    border: 1px solid grey;
+    width: 50%;
+    height: max-content;
+    margin: auto;
+    text-align: center;
+  }
