added new files

--- a/REACT/componentslearn/src/index.css
+++ b/REACT/componentslearn/src/index.css
@@ -65,3 +65,13 @@
     margin: auto;
     text-align: center;
   }
+  main ul{
+    list-style: none;
+  }
+  main .item svg{
+    color: lightblue;
+    outline: none;
+  }
+  main .item svg:hover{
+    color: red;
+  }
